--- a/style.css
+++ b/style.css
@@ -71,3 +71,52 @@ img {
 .clear {
   clear: both;
 }
+
+/* SMARTPHONE */
+@media all and (max-width: 419px) {
+  
+  /* BLOCCO LEZIONI SMARTPHONE */
+  #lezioni .row>.left,
+  #lezioni .row>.right {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  
+  /* BLOCCO STEPS SMARTPHONE */
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    width: 100%;
+    margin-top: 60px;
+  }
+  
+  /* BLOCCO PERCHE' SMARTPHONE */
+  #why {
+    margin-top: 60px;
+  }
+
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+    margin: 30px 0;
+  }
+  
+  #why .row img {
+    height: 100px;
+  }
+
+  #why hr {
+    margin: 40px 0;
+  }
+
+  /* COMMON */
+    .row {
+      width: auto;
+      margin: 0;
+      font-size: 1.5rem;
+    }
+    
+    h1 {
+      font-size: 1.8em;
+    }
+}
